# AE4204-KBE-TL-NvN-2025

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/diagrams/: Improved_UML_KBE_class_diagram.drawio  KBE_glidesign_UML_diagrams.drawio  class_diagram.drawio
docs/source/: analysis.rst  conf.py  core.rst  geometry.rst  index.rst
input/: glider.xlsx
src/glidesign/: __init__.py  main.py
src/glidesign/analysis/: __init__.py  scissor_plot.py  scissorplot.py  size_tail.py  weight_and_balance.py
src/glidesign/core/: __init__.py  convert_matlab_dict.py  cst_curves.py  excel_loader.py  isa.py  naca_profiles.py  validator.py
src/glidesign/geometry/: __init__.py  airfoil.py  cst_curves.py  fuselage.py  fuselage2.py  glider.py  lifting_surface.py  ref_frame.py
src/glidesign/ui/: __init__.py  glider_app.py
tests/: test_liftingsurface.py  testing_file.py
