[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GliDesign"
version = "0.1.0"
description = "Glider aircraft design application built with ParaPy"
readme = "README.md"
authors = [
  { name = "Ties Leniger", email = "tleniger@tudelft.nl" },
  { name = "Niels van Nieuwland", email = "n.m.vannieuwland@student.tudelft.nl" }
]

requires-python = ">=3.11"
dependencies = [
  "alabaster>=1.0.0",
  "avlwrapper>=0.3.4",
  "babel>=2.17.0",
  "certifi>=2025.4.26",
  "charset-normalizer>=3.4.1",
  "colorama>=0.4.6",
  "contourpy>=1.3.2",
  "cycler>=0.12.1",
  "docutils>=0.21.2",
  "et_xmlfile>=2.0.0",
  "fonttools>=4.58.0",
  "idna>=3.10",
  "imagesize>=1.4.1",
  "Jinja2>=3.1.6",
  "kiwisolver>=1.4.8",
  "lxml>=5.3.1",
  "MarkupSafe>=3.0.2",
  "matlab>=0.1",
  "matlabengine>=24.2",
  "matplotlib>=3.10.3",
  "numpy>=1.26.4",
  "occ-utils>=1.2.4",
  "occ-wrapper>=7.3.0.1",
  "openpyxl>=3.1.5",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "parapy>=1.13.0",
  "parapy-lib-xfoil>=1.0.2",
  "pillow>=11.1.0",
  "Pygments>=2.19.1",
  "pyparsing>=3.2.3",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "requests>=2.32.3",
  "roman-numerals-py>=3.1.0",
  "scipy>=1.15.2",
  "six>=1.17.0",
  "snowballstemmer>=2.2.0",
  "Sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2",
  "sphinxcontrib-applehelp>=2.0.0",
  "sphinxcontrib-devhelp>=2.0.0",
  "sphinxcontrib-htmlhelp>=2.1.0",
  "sphinxcontrib-jquery>=4.1",
  "sphinxcontrib-jsmath>=1.0.1",
  "sphinxcontrib-qthelp>=2.0.0",
  "sphinxcontrib-serializinghtml>=2.0.0",
  "typing_extensions>=4.12.2",
  "tzdata>=2025.2",
  "urllib3>=2.4.0",
  "wxPython>=4.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["glidesign*"]